--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support.constraint:constraint-layout:+'
 }
